--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Basics</title>
+    <title>My Vue Boilerplatte</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #e3f2fd;">
+    <nav 
+       class="navbar navbar-expand-sm"
+       :class="navbarClasses">
         <a class="navbar-brand" href="#">My Portfolio</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -17,9 +19,11 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li v-for="(page, index) in pages" class="nav-item active" :key="index">
                     <a 
-                        class="nav-link" 
+                        class="nav-link"
+                        :class="{active: activePage == index}" 
                         :href="page.link.URL"
                         :title="`This link goes to the ${page.link.text} page`"
+                        @click.prevent="activePage = index"
                         >{{ page.link.text }}
                         <span class="sr-only">(current)</span>
                     </a>
@@ -32,6 +36,12 @@
                     </div>
                 </li>
             </ul>
+            <form class="d-flex">
+                <button 
+                    class="btn btn-primary"
+                    @click.prevent="useDarkNavbar = !useDarkNavbar"
+                    >{{ useDarkNavbar ? 'Toggle Light' : 'Toggle Dark' }}</button>
+            </form>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -39,15 +49,27 @@
         </div>
     </nav>
     <div id="content" class="container">
-        <h1>{{ pageTitle }}</h1>
-    <p>{{ content }}</p>
+        <h1>{{ pages[activePage].pageTitle }}</h1>
+    <p>{{ pages[activePage].content }}</p>
     </div>
 
     <script>
         Vue.createApp({
+            computed: {
+                navbarClasses() {
+                    return {
+                        'navbar-light': !this.useDarkNavbar,
+                        'bg-light': !this.useDarkNavbar, 
+                        'navbar-dark': this.useDarkNavbar,
+                        'bg-dark': this.useDarkNavbar
+                    }
+                }
+            },
             data() {
                 return {
-                  pages: [
+                    activePage: 0,
+                    useDarkNavbar: false,
+                    pages: [
                     {
                      link: {text: 'Home', URL: 'index.html'},
                      pageTitle: 'Home Page',
